--- a/Changes.txt
+++ b/Changes.txt
@@ -11,3 +11,17 @@ Professor
 Associate Professor
 1.Ghanshyamsinh Gohil - Smart Energy Systems (Renewable Energy Integration , Micro-grid management and control )
 2.
+
+
+2nd Para 
+1.Strong points to convince then on " Y electrical Engineering ?"
+2.If you drew the inspiration from a family member , dont be vague about the problem which they had faced, explain it in a crisp manner .
+3. Dont ever use the word "increasing demand" because you should make them feel that you have a passion for electronic engineering .Personally I feel its drifting away from the main reason.
+
+3,4,5 Para
+1.Be specific about the achievements that you did in college.
+2.Discuss about your fav subjects and why were they your's fav and they should be related to your vision and future goals
+3.Tell them about the motivation for the graduate studies instead of who motivated you , because they may not know the person whom you're talking about. 
+
+6 Para
+1.Work exposure is fine .Adding some milestones that you have achieved will also look good.
